project(peq)

INCLUDE("${esesc_SOURCE_DIR}/CMake.common")

INCLUDE_DIRECTORIES(${suc_SOURCE_DIR})
#INCLUDE_DIRECTORIES(${mcpat_SOURCE_DIR})
INCLUDE_DIRECTORIES(${pwrmodel_SOURCE_DIR})
INCLUDE_DIRECTORIES(${core_SOURCE_DIR})
INCLUDE_DIRECTORIES(${emulint_SOURCE_DIR})
INCLUDE_DIRECTORIES(${crack_SOURCE_DIR})
#INCLUDE_DIRECTORIES(${sesctherm_SOURCE_DIR})



#IF(NOT DEFINED NTHREADS)
#   SET(NTHREADS 1)
#ENDIF(NOT DEFINED NTHREADS)

FILE(GLOB peq_SOURCE *.cpp)
FILE(GLOB peq_HEADER *.h)

SOURCE_GROUP("Source Files" FILES ${peq_SOURCE})
SOURCE_GROUP("Header Files" FILES ${peq_HEADER})

#FILE(GLOB exec_SOURCE1 main.cpp)

#LIST(REMOVE_ITEM peq_SOURCE main.cpp)

ADD_LIBRARY(peq ${peq_SOURCE} ${peq_HEADER})

