project(mem)
INCLUDE("${esesc_SOURCE_DIR}/CMake.common")

INCLUDE_DIRECTORIES(${suc_SOURCE_DIR})
INCLUDE_DIRECTORIES(${crack_SOURCE_DIR})
INCLUDE_DIRECTORIES(${emulint_SOURCE_DIR})
INCLUDE_DIRECTORIES(${core_SOURCE_DIR})
# circular dep INCLUDE_DIRECTORIES(${sampler_SOURCE_DIR}) 

FILE(GLOB mem_SOURCE *.cpp)
FILE(GLOB mem_HEADER *.h)

SOURCE_GROUP("Source Files" FILES ${mem_SOURCE})
SOURCE_GROUP("Header Files" FILES ${mem_HEADER})

ADD_LIBRARY(mem ${mem_SOURCE} ${mem_HEADER})
