project(sampler)
INCLUDE("${esesc_SOURCE_DIR}/CMake.common")

INCLUDE_DIRECTORIES(${suc_SOURCE_DIR})
INCLUDE_DIRECTORIES(${crack_SOURCE_DIR})
INCLUDE_DIRECTORIES(${core_SOURCE_DIR})
INCLUDE_DIRECTORIES(${emulint_SOURCE_DIR})
INCLUDE_DIRECTORIES(${mcpat_SOURCE_DIR}) 
INCLUDE_DIRECTORIES(${pwrmodel_SOURCE_DIR})
INCLUDE_DIRECTORIES(${sesctherm_SOURCE_DIR})
INCLUDE_DIRECTORIES(${mem_SOURCE_DIR})

#IF(ENABLE_PEQ)
INCLUDE_DIRECTORIES(${peq_SOURCE_DIR})
#ENDIF(ENABLE_PEQ)

IF(ENABLE_QEMU_SYSTEM OR ENABLE_QEMU_USER) 
  INCLUDE_DIRECTORIES(${qemuint_SOURCE_DIR}) 
ENDIF(ENABLE_QEMU_SYSTEM OR ENABLE_QEMU_USER) 
IF(ENABLE_CUDA)
  INCLUDE_DIRECTORIES(${gpuint_SOURCE_DIR}) 
ENDIF(ENABLE_CUDA)

FILE(GLOB sampler_SOURCE *.cpp)
FILE(GLOB sampler_HEADER *.h)

SOURCE_GROUP("Source Files" FILES ${sampler_SOURCE})
SOURCE_GROUP("Header Files" FILES ${sampler_HEADER})

ADD_LIBRARY(sampler ${sampler_SOURCE} ${sampler_HEADER})

