project(sampler)
INCLUDE("${esesc_SOURCE_DIR}/CMake.common")

INCLUDE_DIRECTORIES(${suc_SOURCE_DIR})
INCLUDE_DIRECTORIES(${crack_SOURCE_DIR})
INCLUDE_DIRECTORIES(${core_SOURCE_DIR})
INCLUDE_DIRECTORIES(${emulint_SOURCE_DIR})
INCLUDE_DIRECTORIES(${mcpat_SOURCE_DIR}) 
INCLUDE_DIRECTORIES(${pwrmodel_SOURCE_DIR})
INCLUDE_DIRECTORIES(${sesctherm_SOURCE_DIR})
INCLUDE_DIRECTORIES(${mem_SOURCE_DIR})
INCLUDE_DIRECTORIES(${peq_SOURCE_DIR})
INCLUDE_DIRECTORIES(${qemuint_SOURCE_DIR}) 

FILE(GLOB sampler_SOURCE *.cpp)
FILE(GLOB sampler_HEADER *.h)

SOURCE_GROUP("Source Files" FILES ${sampler_SOURCE})
SOURCE_GROUP("Header Files" FILES ${sampler_HEADER})

ADD_LIBRARY(sampler ${sampler_SOURCE} ${sampler_HEADER})

